# knives-out-mirroring-keymap

./: README.md  config.example.json  iphone-mirroring-keymap-prd.md  pyproject.toml  setup_app.py
mirroring_keymap/: __main__.py  cli.py  config.py  default_config.py  engine.py  mathutil.py  ui_app.py  ui_cocoa.py  ui_main.py
mirroring_keymap/macos/: __init__.py  injector.py  input_capture.py  keycodes.py  window.py
scripts/: build_app.sh
